--- a/src/settings/global.less
+++ b/src/settings/global.less
@@ -7,10 +7,11 @@ body {
 
 	text-size-adjust: none;
 	overscroll-behavior: none;
+	overscroll-behavior-y: none;
 }
 
 @layer components {
 	.App {
-		@apply absolute w-full h-full;
+		@apply absolute h-full w-full;
 	}
 }
