--- a/src/settings/global.less
+++ b/src/settings/global.less
@@ -2,16 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap');
+
 body {
+	position: fixed;
+	overflow: hidden;
 	margin: 0;
+	height: 100vh;
+	height: 100dvh;
 
 	text-size-adjust: none;
 	overscroll-behavior: none;
 	overscroll-behavior-y: none;
-}
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 
-@layer components {
-	.App {
-		@apply absolute h-full w-full;
-	}
+	@apply w-full;
 }
