--- a/src/components/audio/index.less
+++ b/src/components/audio/index.less
@@ -1,32 +1,20 @@
+@import url('../../settings/config.less');
+
 .Audio {
 	height: 212px;
 	background-image: url('./img/gradient.png');
 	background-position: right;
 	background-size: auto 100%;
 	background-repeat: no-repeat;
+	pointer-events: none;
 
 	@apply absolute bottom-0 z-10 w-full;
 
 	.content {
 		position: absolute;
-		top: 30%;
-		right: 100px;
-		margin-top: -25px;
-		width: 300px;
 		height: 50px;
 
-		@img: './img/wave.svg';
-
 		@apply flex flex-row items-center justify-end;
-
-		.symbol {
-			width: 51px;
-			height: 23px;
-			background-image: url(@img);
-			background-position-x: 0%;
-			background-position-y: center;
-			animation: wave 120s linear infinite;
-		}
 
 		.text {
 			width: image-width(@img) * @scale;
@@ -54,6 +42,7 @@
 					rgba(255, 109, 0, 1) 100%
 				);
 				animation: brushed 5s ease-in-out infinite;
+				pointer-events: none;
 			}
 
 			@keyframes brushed {
@@ -75,6 +64,21 @@
 			}
 			100% {
 				background-position-x: 1000%;
+			}
+		}
+	}
+}
+
+@media only screen and (max-width: @bp) {
+	.Audio {
+		height: 155px;
+		.content {
+			.text {
+				width: image-width(@img) * @scale;
+				height: image-height(@img) * @scale;
+
+				@scale: 1.5;
+				@img: './img/text.svg';
 			}
 		}
 	}
