--- a/src/components/backgroundGrid/index.less
+++ b/src/components/backgroundGrid/index.less
@@ -1,3 +1,5 @@
+@import url('../../settings/config.less');
+
 .BackgroundGrid {
 	position: absolute;
 	top: 0;
@@ -6,6 +8,11 @@
 	background-image: url('./img/grid.png');
 	background-position: center;
 	background-size: 202px * 0.7;
-	content: '';
 	opacity: 0.3;
+}
+
+@media only screen and (max-width: @bp) {
+	.BackgroundGrid {
+		background-image: none;
+	}
 }
