--- a/template/template.html
+++ b/template/template.html
@@ -2,7 +2,7 @@
 <html lang="zh-tw" data-theme="luxury">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width,user-scalable=0" />
+		<meta name="viewport" content="width=640,user-scalable=0" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 		<title><%= htmlWebpackPlugin.options.title %></title>
 		<meta property="og:description" content="<%= htmlWebpackPlugin.options.description %>" />
