--- a/src/components/footer/index.less
+++ b/src/components/footer/index.less
@@ -8,7 +8,6 @@
 	@apply absolute bottom-0 flex w-full justify-center bg-black;
 
 	&::before {
-		top: 0;
 		height: 1px;
 		background: linear-gradient(
 			90deg,
@@ -20,7 +19,7 @@
 		);
 		content: '';
 
-		@apply absolute w-full;
+		@apply absolute top-0 w-full;
 	}
 
 	& > div {
