--- a/src/pages/payLoader/foregroundGradient/index.less
+++ b/src/pages/payLoader/foregroundGradient/index.less
@@ -1,39 +1,28 @@
 .ForegroundGradient {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	pointer-events: none;
-
 	@img: './img/foregroundGradient.png';
 
+	@apply pointer-events-none absolute top-0 left-0 h-full w-full;
+
 	&::before {
-		position: absolute;
-		top: 0;
-		left: 0;
 		padding-bottom: (unit(image-height(@img) / unit(image-width(@img))) * @width);
 		width: @width;
 		background-image: url(@img);
-		background-size: cover;
 		content: '';
-		opacity: 0.7;
 
 		@width: 100%;
+
+		@apply pointer-events-none absolute top-0 left-0 bg-cover opacity-70;
 	}
 
 	&::after {
-		position: absolute;
-		right: 0;
-		bottom: -5%;
 		padding-bottom: (unit(image-height(@img) / unit(image-width(@img))) * @width);
 		width: @width;
 		background-image: url(@img);
-		background-size: cover;
 		// content: '';
 		opacity: 1;
-		transform: rotate(180deg);
 
 		@width: 100%;
+
+		@apply absolute right-0 rotate-180 bg-cover opacity-100;
 	}
 }
