--- a/src/pages/payLoader/index.less
+++ b/src/pages/payLoader/index.less
@@ -1,17 +1,12 @@
 .PayLoader {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	@apply z-10;
+	@apply absolute z-10 h-full w-full;
 	// pointer-events: none
 
 	&::after {
-		position: absolute;
-		bottom: 0;
-		left: 0;
-		width: 100%;
 		height: 30%;
 		background: linear-gradient(0deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0) 100%);
 		content: '';
+
+		@apply pointer-events-none absolute bottom-0 left-0 w-full;
 	}
 }
