--- a/src/pages/payLoader/processBar/index.less
+++ b/src/pages/payLoader/processBar/index.less
@@ -1,23 +1,21 @@
 .ProcessBar {
-	position: absolute;
-	bottom: 0;
-	width: 100%;
 	height: 212px;
 
+	@apply absolute bottom-0 w-full;
+
 	.text {
-		position: absolute;
 		top: 30%;
 		margin-top: -25px;
-		width: 100%;
 		height: 50px;
-		text-align: center;
-		animation: breathe 5s ease-in-out infinite;
+
+		@apply absolute w-full text-center;
+
+		& > div:nth-child(1) {
+			animation: breathe 3s ease-in-out infinite;
+		}
 	}
 
 	.bar {
-		position: absolute;
-		top: 0;
-		width: 0%;
 		height: 1px;
 		background: linear-gradient(
 			90deg,
@@ -25,19 +23,90 @@
 			rgba(205, 178, 154, 1) 50%,
 			rgba(118, 72, 55, 1) 100%
 		);
+
+		@apply absolute top-0 w-0;
 	}
 
 	@keyframes breathe {
 		0% {
-			opacity: 1;
+			@apply opacity-100;
 		}
 
 		50% {
-			opacity: 0.5;
+			@apply opacity-50;
 		}
 
 		100% {
-			opacity: 1;
+			@apply opacity-100;
+		}
+	}
+
+	.Mouse {
+		@apply absolute -mt-14 flex w-full justify-center rounded-full;
+
+		.gradient {
+			background: radial-gradient(
+				circle,
+				rgba(0, 0, 0, 1) 0%,
+				rgba(0, 0, 0, 1) 30%,
+				rgba(0, 0, 0, 0) 70%
+			);
+
+			@scale: 0.9;
+			@img: './img/iconShadow.svg';
+			@apply relative flex h-36 w-36 items-center justify-center rounded-full;
+
+			.icon {
+				position: relative;
+				width: image-width(@img) * @scale;
+				height: image-height(@img) * @scale;
+				background-image: url(@img);
+				background-size: 100%;
+				animation-delay: 5s;
+
+				@scale: 0.9;
+				@img: './img/mouse.svg';
+			}
+
+			.shadow {
+				position: absolute;
+				left: 50%;
+				margin-left: 0 - image-width(@img) * @scale * 0.5;
+				width: image-width(@img) * @scale;
+				height: image-height(@img) * @scale;
+				background-image: url(@img);
+				background-size: 100%;
+			}
+
+			& > div {
+				animation: dragDown 3s ease-in-out infinite;
+			}
+
+			& > div:nth-child(1) {
+				margin-top: 10px;
+				animation-delay: 5.1s;
+			}
+
+			& > div:nth-child(2) {
+				margin-top: 20px;
+				animation-delay: 5.2s;
+			}
+		}
+		.text {
+			top: 87%;
+			@apply absolute font-notoSans text-lg font-normal text-white;
+		}
+
+		@keyframes dragDown {
+			0% {
+				transform: translateY(0px);
+			}
+			80% {
+				transform: translateY(-10px);
+			}
+			100% {
+				transform: translateY(0px);
+			}
 		}
 	}
 }
