--- a/src/pages/payLoader/processBar/index.less
+++ b/src/pages/payLoader/processBar/index.less
@@ -1,5 +1,7 @@
+@import url('../../../settings/config.less');
+
 .ProcessBar {
-	height: 212px;
+	height: 200px;
 
 	@apply absolute bottom-0 w-full;
 
@@ -108,5 +110,11 @@
 				transform: translateY(0px);
 			}
 		}
+	}
+}
+
+@media only screen and (max-width: @bp) {
+	.ProcessBar {
+		height: 155px;
 	}
 }
