--- a/src/settings/global.less
+++ b/src/settings/global.less
@@ -19,5 +19,17 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 
+	.app {
+		overflow: hidden;
+		min-height: 930px;
+	}
+
 	@apply w-full;
+}
+
+@media only screen and (max-height: 930px) {
+	body {
+		position: relative;
+		overflow: auto;
+	}
 }
