--- a/src/pages/payLoader/carOutline/index.less
+++ b/src/pages/payLoader/carOutline/index.less
@@ -1,16 +1,9 @@
 .CarOutline {
-	position: absolute;
-	top: 0;
-	width: 100%;
-	height: 100%;
+	transform: scale(0.96);
+	@apply absolute top-0 flex h-full w-full items-center justify-center;
 
 	& > svg {
 		position: absolute;
-		top: 50%;
-		left: 50%;
-		margin-top: -481px;
-		margin-left: -785px;
-		transform-origin: 0% 0%;
 	}
 
 	.on {
