--- a/src/pages/payLoader/processBar/index.less
+++ b/src/pages/payLoader/processBar/index.less
@@ -42,6 +42,75 @@
 			@apply opacity-100;
 		}
 	}
+
+	.Mouse {
+		@apply absolute -mt-14 flex w-full justify-center rounded-full;
+
+		.gradient {
+			background: radial-gradient(
+				circle,
+				rgba(0, 0, 0, 1) 0%,
+				rgba(0, 0, 0, 1) 30%,
+				rgba(0, 0, 0, 0) 70%
+			);
+
+			@scale: 0.9;
+			@img: './img/iconShadow.svg';
+			@apply relative flex h-36 w-36 items-center justify-center rounded-full;
+
+			.icon {
+				position: relative;
+				width: image-width(@img) * @scale;
+				height: image-height(@img) * @scale;
+				background-image: url(@img);
+				background-size: 100%;
+				animation-delay: 5s;
+
+				@scale: 0.9;
+				@img: './img/mouse.svg';
+			}
+
+			.shadow {
+				position: absolute;
+				left: 50%;
+				margin-left: 0 - image-width(@img) * @scale * 0.5;
+				width: image-width(@img) * @scale;
+				height: image-height(@img) * @scale;
+				background-image: url(@img);
+				background-size: 100%;
+			}
+
+			& > div {
+				animation: dragDown 3s ease-in-out infinite;
+			}
+
+			& > div:nth-child(1) {
+				margin-top: 10px;
+				animation-delay: 5.1s;
+			}
+
+			& > div:nth-child(2) {
+				margin-top: 20px;
+				animation-delay: 5.2s;
+			}
+		}
+		.text {
+			top: 87%;
+			@apply absolute font-notoSans text-lg font-normal text-white;
+		}
+
+		@keyframes dragDown {
+			0% {
+				transform: translateY(0px);
+			}
+			80% {
+				transform: translateY(-10px);
+			}
+			100% {
+				transform: translateY(0px);
+			}
+		}
+	}
 }
 
 @media only screen and (max-width: @bp) {
