--- a/src/components/footer/author/index.less
+++ b/src/components/footer/author/index.less
@@ -1,8 +1,33 @@
 .Author {
-	.avatar-0 {
-		background-image: url('./img/0.jpg');
+	margin-top: 20px;
+
+	.avatars {
 		background-position: center;
 		background-size: cover;
 		background-repeat: no-repeat;
+	}
+
+	.author-0 {
+		background-image: url('./img/0.jpg');
+	}
+
+	.author-1 {
+		background-image: url('./img/1.jpg');
+	}
+
+	.author-2 {
+		background-image: url('./img/2.jpg');
+	}
+
+	.author-3 {
+		background-image: url('./img/3.jpg');
+	}
+
+	.author-4 {
+		background-image: url('./img/4.jpg');
+	}
+
+	.author-5 {
+		background-image: url('./img/5.jpg');
 	}
 }
