--- a/src/pages/payLoader/carOutline/index.less
+++ b/src/pages/payLoader/carOutline/index.less
@@ -7,7 +7,7 @@
 	}
 
 	.on {
-		animation: dash 50s cubic-bezier(0.25, 1, 0.5, 1);
+		animation: dash 20s linear;
 
 		animation-fill-mode: forwards;
 	}
