--- a/src/settings/global.less
+++ b/src/settings/global.less
@@ -6,6 +6,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@400;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap');
 
+@layer base {
+	img,
+	video {
+		max-width: unset;
+		height: unset;
+	}
+}
 body {
 	position: fixed;
 	overflow: hidden;
@@ -21,7 +28,7 @@ body {
 
 	.app {
 		overflow: hidden;
-		min-height: 830px;
+		// min-height: 830px;
 	}
 
 	@apply w-full;
