--- a/src/components/footer/index.less
+++ b/src/components/footer/index.less
@@ -38,6 +38,12 @@
 	.Footer {
 		height: 155px;
 		background-image: none;
+
+		& > div {
+			.square {
+				margin-top: -110px;
+			}
+		}
 	}
 }
 
