--- a/src/components/mouseWheelIcon/index.less
+++ b/src/components/mouseWheelIcon/index.less
@@ -1,5 +1,5 @@
 .Mouse {
-	@apply pointer-events-none absolute flex w-full justify-center rounded-full;
+	@apply absolute flex w-full justify-center rounded-full;
 
 	.gradient {
 		background: radial-gradient(
