--- a/src/components/section/index.less
+++ b/src/components/section/index.less
@@ -1,2 +1,34 @@
+@import url('../../settings/config.less');
+
 .Section {
+	& > div:nth-child(1) {
+		height: 133px;
+	}
+	& > div:nth-child(3) {
+		height: 212px;
+	}
+}
+
+@media only screen and (max-width: @bp) {
+	.Section {
+		& > div:nth-child(1) {
+			height: 115px;
+		}
+
+		& > div:nth-child(3) {
+			height: 155px;
+		}
+	}
+}
+
+@media only screen and (max-height: @bpH) {
+	.Section {
+		& > div:nth-child(1) {
+			height: 90px;
+		}
+
+		& > div:nth-child(3) {
+			height: 130px;
+		}
+	}
 }
