--- a/src/settings/global.less
+++ b/src/settings/global.less
@@ -6,13 +6,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@400;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap');
 
-@layer base {
-	img,
-	video {
-		max-width: unset;
-		height: unset;
-	}
-}
+// @layer base {
+// 	img,
+// 	video {
+// 		max-width: unset;
+// 		height: unset;
+// 	}
+// }
 body {
 	position: fixed;
 	overflow: hidden;
