--- a/template/template.html
+++ b/template/template.html
@@ -16,7 +16,7 @@
 		<meta property="og:site_name" content="<%= htmlWebpackPlugin.options.title %>" />
 		<link rel="apple-touch-icon" href="./img/apple-touch-icon.jpg" />
 		<link rel="image_src" href="./img/meta-img.jpg" />
-		<link href="./img/favicon.ico" rel="icon" type="image/x-icon" />
+		<link href="./img/favicon.png" rel="icon" type="image/x-icon" />
 		<meta name="apple-mobile-web-app-capable" content="no" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 	</head>
