--- a/src/components/audio/wave/index.less
+++ b/src/components/audio/wave/index.less
@@ -1,4 +1,6 @@
+@import url('../../../settings/config.less');
 .Wave {
+	margin: 2rem;
 	width: 51px;
 	height: 23px;
 	background-image: url(@img);
@@ -7,4 +9,10 @@
 	animation: wave 120s linear infinite;
 
 	@img: './img/wave.svg';
+}
+
+@media only screen and (max-width: @bp) {
+	.Wave {
+		margin: 0;
+	}
 }
