adjustment online car and video position

--- a/src/pages/payLoader/carOutline/index.less
+++ b/src/pages/payLoader/carOutline/index.less
@@ -1,5 +1,7 @@
 .CarOutline {
-	transform: scale(0.96);
+	margin-top: 3%;
+	margin-left: 31.7%;
+	transform: scale(1.42);
 	@apply absolute top-0 flex h-full w-full items-center justify-center;
 
 	& > svg {
