--- a/src/components/caption/index.less
+++ b/src/components/caption/index.less
@@ -16,6 +16,8 @@
 	}
 
 	.caption {
+		position: relative;
+
 		mask-repeat: no-repeat;
 		mask-position: center;
 		mask-size: 100%;
@@ -31,16 +33,19 @@
 				rgba(206, 178, 154, 1) 75%,
 				rgba(126, 77, 61, 1) 100%
 			);
-			animation: brushed 5s ease-in-out infinite;
+			animation: captionBrushed 10s ease-in-out infinite;
 			pointer-events: none;
 		}
 
-		@keyframes brushed {
+		@keyframes captionBrushed {
 			0% {
 				left: 0%;
 			}
-			100% {
+			50% {
 				left: -100%;
+			}
+			100% {
+				left: 0%;
 			}
 		}
 	}
