--- a/src/components/header/index.less
+++ b/src/components/header/index.less
@@ -2,9 +2,14 @@
 
 .header-material {
 	background-color: black;
-	background-image: url('../img/background.svg');
-	background-position: calc(~'50% + 300px') calc(~'50% - 40px');
-	background-repeat: no-repeat;
+	& > div:nth-child(1) {
+		background-image: url('../img/background.svg');
+		background-position: calc(~'50% + 300px') calc(~'50% - 40px');
+		background-repeat: no-repeat;
+		opacity: 0.5;
+
+		@apply absolute top-0 h-full w-full;
+	}
 
 	&::after {
 		bottom: 0;
@@ -62,10 +67,12 @@
 
 @media only screen and (max-width: @bp) {
 	.header-material {
-		background-color: transparent;
-		background-image: url('./img/foregroundGradient.png');
-		background-position: 0 0;
-		background-size: 100%;
+		& > div:nth-child(1) {
+			background-color: transparent;
+			background-image: url('./img/foregroundGradient.png');
+			background-position: 0 0;
+			background-size: 100%;
+		}
 
 		&::after {
 			height: 0;
