--- a/src/components/voiceOver/index.less
+++ b/src/components/voiceOver/index.less
@@ -1,9 +1,12 @@
-.VoiceOver {
-	& > div {
-		opacity: 0.3;
-	}
+@import url('../../settings/config.less');
 
-	& > div:nth-child(1) {
-		opacity: 1;
+.VoiceOver {
+}
+
+@media only screen and (max-width: @bp) {
+	.VoiceOver {
+		& > div {
+			display: none;
+		}
 	}
 }
