--- a/src/components/Interview/index.less
+++ b/src/components/Interview/index.less
@@ -8,7 +8,8 @@
 			width: 1920px;
 			height: 1080px;
 			transform-origin: center 80%;
-			@apply relative flex items-center justify-center;
+
+			@apply pointer-events-none relative flex items-center justify-center;
 
 			.image {
 				position: relative;
@@ -19,6 +20,7 @@
 				background-size: 100%;
 				background-repeat: no-repeat;
 				opacity: 1;
+				pointer-events: auto;
 
 				@scale: 0.22;
 				@img: './img/car.png';
@@ -42,7 +44,7 @@
 	.title {
 		position: absolute;
 		top: 50%;
-		margin-top: -260px;
+		margin-top: -350px;
 		width: image-width(@img) * @scale;
 		height: image-height(@img) * @scale;
 
