--- a/src/pages/payLoader/index.less
+++ b/src/pages/payLoader/index.less
@@ -1,5 +1,5 @@
 .PayLoader {
-	@apply absolute z-10 h-full w-full;
+	@apply pointer-events-none absolute z-10 h-full w-full;
 	// pointer-events: none
 
 	&::after {
