--- a/src/components/Interview/index.less
+++ b/src/components/Interview/index.less
@@ -1,3 +1,5 @@
+@import url('../../settings/config.less');
+
 .Interview {
 	@apply absolute top-0 h-full w-full;
 
@@ -20,6 +22,7 @@
 				background-size: 100%;
 				background-repeat: no-repeat;
 				opacity: 1;
+				transform-origin: center 74%;
 				pointer-events: auto;
 
 				@scale: 0.22;
@@ -79,6 +82,22 @@
 			}
 			100% {
 				left: 0%;
+			}
+		}
+	}
+}
+
+@media only screen and (max-width: @bp) {
+	.Interview {
+		.cistern {
+			.vehicle {
+				.image {
+					margin-top: -40px;
+					margin-left: -10px;
+				}
+			}
+			.Gradient {
+				display: none;
 			}
 		}
 	}
