--- a/src/components/audio/index.less
+++ b/src/components/audio/index.less
@@ -7,7 +7,6 @@
 	background-size: auto 100%;
 	background-repeat: no-repeat;
 	pointer-events: none;
-
 	@apply absolute bottom-0 z-10 w-full;
 
 	.content {
@@ -18,6 +17,8 @@
 		.text {
 			width: image-width(@img) * @scale;
 			height: image-height(@img) * @scale;
+			cursor: pointer;
+			pointer-events: auto;
 
 			@scale: 0.9;
 			@img: './img/text.svg';
@@ -25,6 +26,10 @@
 			mask-repeat: no-repeat;
 			mask-position: center;
 			mask-size: 100%;
+
+			&:active {
+				transform: scale(0.95);
+			}
 
 			.gradient {
 				width: 200%;
