--- a/src/components/breadcrumbs/index.less
+++ b/src/components/breadcrumbs/index.less
@@ -3,7 +3,7 @@
 .Breadcrumbs {
 	// margin-bottom: 80px;
 
-	@apply flex w-full flex-col items-start space-y-3;
+	@apply relative flex w-full flex-col items-start space-y-3;
 
 	.bars {
 		& > div {
