--- a/src/components/Interview/index.less
+++ b/src/components/Interview/index.less
@@ -23,7 +23,7 @@
 				background-repeat: no-repeat;
 				opacity: 1;
 				transform-origin: center 74%;
-				pointer-events: auto;
+				pointer-events: none;
 
 				@scale: 0.22;
 				@img: './img/car.png';
