--- a/src/components/Interview/carousel/index.less
+++ b/src/components/Interview/carousel/index.less
@@ -43,8 +43,9 @@
 
 		.yt {
 			position: relative;
+			pointer-events: none;
 
-			@apply p-5;
+			@apply px-5;
 
 			.yt-c {
 				position: relative;
@@ -58,6 +59,7 @@
 					right: 0;
 					bottom: 0;
 					left: 0;
+					pointer-events: none;
 				}
 			}
 
@@ -112,6 +114,7 @@
 @media only screen and (max-width: @bp) {
 	.Carousel {
 		.content {
+			margin-top: -291px;
 			.arrow {
 				left: -15px;
 			}
@@ -122,7 +125,7 @@
 			}
 
 			.yt {
-				@apply p-10;
+				@apply px-10 py-20;
 			}
 		}
 	}
